2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, lib/getdef.c, man/login.defs.5.xml: New login.defs
	variable: MAX_MEMBERS_PER_GROUP. Used for the split groups support.
	* lib/commonio.c, lib/commonio.h: Add an open_hook and close_hook
	operation. They are called after the database is actually opened
	and parse, or before it is closed.
	* lib/groupio.c: Add an open_hook to merge split groups, and an
	close group to split groups if MAX_MEMBERS_PER_GROUP is set.
	This fixes gpasswd and chgpasswd when split groups are used.
	* lib/sgroupio.c, lib/shadowio.c, lib/pwio.c: No open or close
	hooks for these databases. (unsure about what should be the gshadow
	behavior for split groups)

2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/gpasswd.c: Read the group and shadow groups using
	gr_locate and sgr_locate. gpasswd write in the file database. Thus
	it should read information from the file database, not using
	getgrnam. The change to sgr_locate is just for consistency. This
	requires opening the group databases (read only) using
	gr_open/sgr_open.

2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: SHADOWGRP added to AM_CONDITIONAL for the
	generation of manpages.
	* man/generate_translations.mak: Added pam/no_pam condition (like
	in man/Makefile.am).
	* man/Makefile.am, man/generate_translations.mak: Added
	gshadow/no_gshadow condition.
	* man/gpasswd.1.xml: Use the gshadow/no_gshadow condition to
	change the manpage depending on the shadow group support.
	* NEWS: Indicate that manpages should be re-generated if configure
	option are changed, due to conditions.

2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* po/ru.po: Updated to 399t. Thanks to Yuri Kozlov <kozlov.y@gmail.com>.
	* man/po/ru.po: Updated to 757t. Thanks also to Yuri Kozlov
	<kozlov.y@gmail.com>.

2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>
